--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">报告妈妈</string>
+    <string name="app_name">宝贝在哪</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
 
